USE DATABASE STG;
USE SCHEMA PUBLIC;

-- DROP dans l'ordre inverse de création des dépendances
DROP TABLE IF EXISTS HOSPITALISATION;
DROP TABLE IF EXISTS CONSULTATION;
DROP TABLE IF EXISTS TRAITEMENT;
DROP TABLE IF EXISTS CHAMBRE;
DROP TABLE IF EXISTS MEDICAMENT;
DROP TABLE IF EXISTS PERSONNEL;
DROP TABLE IF EXISTS PATIENT;

-- CHAMBRE
CREATE TABLE CHAMBRE (
    NO_CHAMBRE INTEGER,
    NOM_CHAMBRE VARCHAR(20),
    NO_ETAGE SMALLINT,
    NOM_BATIMENT VARCHAR(20),
    TYPE_CHAMBRE VARCHAR(10),
    PRIX_JOUR SMALLINT,
    DT_CREATION DATE
);

-- MEDICAMENT
CREATE TABLE MEDICAMENT (
    CD_MEDICAMENT VARCHAR(10),
    NOM_MEDICAMENT VARCHAR(250),
    CONDIT_MEDICAMENT VARCHAR(100),
    CATG_MEDICAMENT VARCHAR(100),
    MARQUE_FABRI VARCHAR(100)
);

-- TRAITEMENT
CREATE TABLE TRAITEMENT (
    ID_TRAITEMENT INTEGER,
    CD_MEDICAMENT VARCHAR(10),
    CATG_MEDICAMENT VARCHAR(100),
    MARQUE_FABRI VARCHAR(100),
    QTE_MEDICAMENT SMALLINT,
    DSC_POSOLOGIE VARCHAR(100),
    ID_CONSULT INTEGER,
    TS_CREATION_TRAITEMENT VARCHAR(30) --Timestamp remplacé par VARCHAR
);

-- PERSONNEL
CREATE TABLE PERSONNEL (
    ID_PERSONNEL INTEGER,
    NOM_PERSONNEL VARCHAR(100),
    PRENOM_PERSONNEL VARCHAR(100),
    FONCTION_PERSONNEL VARCHAR(50),
    TS_DEBUT_ACTIVITE VARCHAR(30), --Timestamp remplacé par VARCHAR
    TS_FIN_ACTIVITE VARCHAR(30), --Timestamp remplacé par VARCHAR
    RAISON_FIN_ACTIVITE VARCHAR(100),
    TS_CREATION_PERSONNEL VARCHAR(30), --Timestamp remplacé par VARCHAR
    TS_MAJ_PERSONNEL VARCHAR(30), --Timestamp remplacé par VARCHAR
    CD_STATUT_PERSONNEL VARCHAR(10)
);

-- PATIENT
CREATE TABLE PATIENT (
    ID_PATIENT INTEGER,
    NOM_PATIENT VARCHAR(100),
    PRENOM_PATIENT VARCHAR(100),
    DT_NAISS DATE,
    VILLE_NAISS VARCHAR(100),
    PAYS_NAISS VARCHAR(100),
    NUM_SECU VARCHAR(15),
    IND_PAYS_NUM_TELP VARCHAR(5),
    NUM_TELEPHONE VARCHAR(20),
    NUM_VOIE VARCHAR(10),
    DSC_VOIE VARCHAR(250),
    CMPL_VOIE VARCHAR(250),
    CD_POSTAL VARCHAR(10),
    VILLE VARCHAR(100),
    PAYS VARCHAR(100),
    TS_CREATION_PATIENT VARCHAR(30), --Timestamp remplacé par VARCHAR
    TS_MAJ_PATIENT VARCHAR(30) --Timestamp remplacé par VARCHAR
);

-- CONSULTATION
CREATE TABLE CONSULTATION (
    ID_CONSULT INTEGER,
    ID_PERSONNEL INTEGER,
    ID_PATIENT INTEGER,
    ID_TRAITEMENT INTEGER,
    TS_DEBUT_CONSULT VARCHAR(30), --Timestamp remplacé par VARCHAR
    TS_FIN_CONSULT VARCHAR(30), --Timestamp remplacé par VARCHAR
    POIDS_PATIENT INTEGER,
    TEMP_PATIENT INTEGER,
    UNIT_TEMP VARCHAR(15),
    TENSION_PATIENT INTEGER,
    DSC_PATHO VARCHAR(250),
    INDIC_DIABETE BOOLEAN,
    INDIC_HOSPI BOOLEAN
);

-- HOSPITALISATION
CREATE TABLE HOSPITALISATION (
    ID_HOSPI INTEGER,
    ID_CONSULT INTEGER,
    NO_CHAMBRE INTEGER,
    ID_PERSONNEL_RESP INTEGER,
    TS_DEBUT_HOSPI VARCHAR(30), --Timestamp remplacé par VARCHAR
    TS_FIN_HOSPI VARCHAR(30), --Timestamp remplacé par VARCHAR
    COUT_HOSPI NUMERIC(10, 2)
);
